Update to be build as a single package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,8 @@
+cmake_minimum_required(VERSION 3.10)
+project(data_recorder)
+
+find_package(PCL REQUIRED)
+
 add_library(data_recorder SHARED data_recorder.cpp)
 
 target_include_directories(data_recorder PUBLIC
